# Ansir_Module

./: .gitignore  README.md  pyproject.toml  setup.py
CoT_package/: __init__.py  my_module.py
CoT_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
