# pyproject.toml
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CoT_package"
version = "0.1.0"
description = "A sample Python package"
authors = [
    { name="Ansir", email="ansir0211@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/AnsirH/Ansir_Module"
